Feat/add todo cud operations (#31)
* feat: update api specs to include cud operations

* feat: add rest handlers for cud operations

* fix(openapi): set ownerUuid as required on all todos' routes

* feat: implement CUD operations

* test(e2e): add tests for CUD operations on todos
