# src/domain/repositories/todos.repository.ts
@@ -3,5 +3,11 @@ import { Todo } from "../models/Todo";
 export interface TodosRepository {
   listTodos(ownerUuid: string): Promise<Todo[]>;
 
-  getTodo(ownerUuid: string, todoUuid: string): Promise<Todo>;
+  getTodo(todoUuid: string, ownerUuid: string): Promise<Todo>;
+
+  createTodo(todo: Todo): Promise<Todo>;
+
+  updateTodo(todo: Todo): Promise<Todo>;
+
+  deleteTodo(todoUuid: string, ownerUuid: string): Promise<void>;
 }
